<resources>
    <string name="app_name">AR App</string>
    <string name="Show">Show</string>
    <string name="QR_scan">QR SCAN</string>
    <string name="Library">Library</string>
    <string name="qrDescription">QR button for going to the QRActivity</string>
    <string name="realityenhance">RealityEnhance</string>
    <string name="lbDescription">Library button for going to the LibraryActivity</string>
    <string name="backDescription">Back button that takes you to the MainActivity</string>
    <string name="delDescription">Button that deletes the selected object</string>
    <string name="scroll_view_label">scroll_view_label</string>
    <string name="tutorial">Tutorial</string>
</resources>